// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders correctly prominence default 1`] = `
<DocumentFragment>
  .cache-1ep33fa-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #464959;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-1ep33fa-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly prominence strong 1`] = `
<DocumentFragment>
  .cache-1vmndro-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #ffffff;
  background: #151a2d;
  border: 1px solid #151a2d;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-1vmndro-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment danger 1`] = `
<DocumentFragment>
  .cache-1iwupf2-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #b3144d;
  background: #ffe3ed;
  border: 1px solid #ffe3ed;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    aria-label="danger"
    as="span"
    class="cache-1iwupf2-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment info 1`] = `
<DocumentFragment>
  .cache-sidg16-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #005da3;
  background: #d5edff;
  border: 1px solid #d5edff;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    aria-label="info"
    as="span"
    class="cache-sidg16-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment neutral 1`] = `
<DocumentFragment>
  .cache-1ep33fa-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #464959;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-1ep33fa-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment primary 1`] = `
<DocumentFragment>
  .cache-1w6btys-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #521094;
  background: #ece8fb;
  border: 1px solid #ece8fb;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-1w6btys-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment success 1`] = `
<DocumentFragment>
  .cache-rtcm9y-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #22674e;
  background: #cbf3e4;
  border: 1px solid #cbf3e4;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    aria-label="success"
    as="span"
    class="cache-rtcm9y-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly sentiment warning 1`] = `
<DocumentFragment>
  .cache-1c9irrx-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #7c5400;
  background: #fff6e6;
  border: 1px solid #fff6e6;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    aria-label="warning"
    as="span"
    class="cache-1c9irrx-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size large 1`] = `
<DocumentFragment>
  .cache-bl434c-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 32px;
  color: #464959;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.cache-pu44o3-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 14px;
  color: inherit;
}

<div
    as="span"
    class="cache-bl434c-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-pu44o3-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size medium 1`] = `
<DocumentFragment>
  .cache-1ep33fa-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #464959;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-1ep33fa-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly size small 1`] = `
<DocumentFragment>
  .cache-t0gcht-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 8px;
  gap: 4px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 16px;
  color: #464959;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.cache-1nrlhp2-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 10px;
  color: inherit;
}

<div
    as="span"
    class="cache-t0gcht-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-1nrlhp2-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-v3dh9-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #6d717c;
  background: #e9eaeb;
  border: none;
}

.cache-1pkpjsq-StyledText-StyledText {
  color: #6d717c;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-v3dh9-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-1pkpjsq-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1ep33fa-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #464959;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-1ep33fa-StyledBox ej33bna0"
    role="status"
  >
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;

exports[`Badge renders correctly with icon 1`] = `
<DocumentFragment>
  .cache-1ep33fa-StyledBox {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  white-space: nowrap;
  border-radius: 16px;
  padding: 0 16px;
  gap: 8px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  height: 24px;
  color: #464959;
  background: #f9f9fa;
  border: 1px solid #d9dadd;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-es9czf-StyledText-StyledText {
  color: #464959;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 12px;
  color: inherit;
}

<div
    as="span"
    class="cache-1ep33fa-StyledBox ej33bna0"
    role="status"
  >
    <svg
      class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
      viewBox="0 0 24 24"
    >
      <path
        d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      />
    </svg>
    <p
      class="ej33bna1 cache-es9czf-StyledText-StyledText e13y3mga0"
    >
      Sample badge
    </p>
  </div>
</DocumentFragment>
`;
